--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
-        <h1>Page Heading</h1>
+        <h1>Lazy Page Heading</h1>
         <div class="table_container">
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="table_sections">
