--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
         <title>Hello Coursera!</title>
     </head>
     <body>
-        <div>aaaaaaa</div>
-        <h1>Hello Coursera! Haaaaefawefave a great day!</h1>
+        <div>aaaaaaawefa</div>
+        <h1>Hello Coursera! awefaawefawafwefefwe day!</h1>
     </body>
 </html>
