fixed tablet menu bar

--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="index.html"><h1>Food, LLC</h1></a>
       </div> <!--navbar-header-->
 
-      <button id="menu_button" type="button" class="navbar-toggler d-block d-sm-none" data-toggle="collapse" data-target="#collapsable_nav" aria-controls="collapsable_nav" aria-expanded="false" aria-label="Toggle navigation">
+      <button id="menu_button" type="button" class="navbar-toggler d-block d-md-none" data-toggle="collapse" data-target="#collapsable_nav" aria-controls="collapsable_nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="collapsable_nav">
