--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -58,7 +58,7 @@
         <div id="sushi_row">
           <h3 class="text-center">Sushi</h3>
           <div class="text_class">
-            Vestibulum non congue ex, eu egestas mauris. Proin iaculis augue magna, quis consectetur quam pharetra eu. Nam ut augue lacus. Maecenas ac convallis dolor. Integer nunc nibh, consectetur quis cursus nec, imperdiet sed turpis. Etiam pharetra, eros at luctus molestie, orci metus condimentum nunc, nec rutrum mauris odio non enim. Curabitur sollicitudin semper pharetra. Nunc quis interdum neque. Ut ut dictum enim.          </div>
+            Vestibulhiiiix, eu egestas mauris. Proin iaculis augue magna, quis consectetur quam pharetra eu. Nam ut augue lacus. Maecenas ac convallis dolor. Integer nunc nibh, consectetur quis cursus nec, imperdiet sed turpis. Etiam pharetra, eros at luctus molestie, orci metus condimentum nunc, nec rutrum mauris odio non enim. Curabitur sollicitudin semper pharetra. Nunc quis interdum neque. Ut ut dictum enim.          </div>
           <a class="back_to_top_link" href="#back_to_top">Back to Top</a>
         </div>
       </div>
